[GR-51750] Class jdk.graal.compiler.core.test.jfr.TestGetEventWriter: Cannot find module(s) matching jdk.jfr: jdk.jfr/jdk.jfr.internal.event.