@@ -38,7 +38,6 @@ import org.objectweb.asm.Opcodes;
 import jdk.graal.compiler.core.common.PermanentBailoutException;
 import jdk.graal.compiler.core.test.SubprocessTest;
 import jdk.graal.compiler.test.AddExports;
-import jdk.graal.compiler.test.SubprocessUtil;
 import jdk.jfr.Event;
 import jdk.jfr.Recording;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
@@ -56,6 +55,10 @@ import jdk.vm.ci.meta.ResolvedJavaMethod;
  */
 @AddExports("jdk.jfr/jdk.jfr.internal.event")
 public class TestGetEventWriter extends SubprocessTest {
+
+    private static boolean isJFRAvailable() {
+        return ModuleLayer.boot().findModule("jdk.jfr").isPresent();
+    }
 
     private static void initializeJFR() {
         try (Recording r = new Recording()) {
@@ -77,6 +80,12 @@ public class TestGetEventWriter extends SubprocessTest {
 
     @Test
     public void test() throws IOException, InterruptedException {
+        String[] args;
+        if (isJFRAvailable()) {
+            args = new String[0];
+        } else {
+            args = new String[]{"--add-modules", "jdk.jfr"};
+        }
         launchSubprocess(() -> {
             try {
                 initializeJFR();
@@ -90,7 +99,7 @@ public class TestGetEventWriter extends SubprocessTest {
             } catch (Throwable t) {
                 throw rethrowSilently(RuntimeException.class, t);
             }
-        }, SubprocessUtil.PACKAGE_OPENING_OPTIONS);
+        }, args);
     }
 
     @SuppressWarnings({"unused", "unchecked"})
